# p1galerkin

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  compile.sh
cmake/: geometry.cmake  globals.cmake  lapack_and_blas.cmake  linalg.cmake
libsrcs/: 40modSpectral.f90  63modP1Galerkin.f90  CMakeLists.txt
